[301] - replace `List.of` -> `Collections.singletonList`